# pypleiades

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.dev  README.md  compose.yml  pyproject.toml  setup.py
bench/: multi_contractor.py  requester.py  test_timer.py  via_queue.py  worker.py
examples/: _raw_requester.py  _raw_worker.py  async_job.py  async_mecio.py  bench-requester.py  client_test.py  developer.py  kv-store.py  ping.py  raw_requester.py  raw_worker.py  reqester.py  requester_timer.py  simple_reqester.py  simple_worker.py  worker.py  worker_timer.py
pymec/: __init__.py  _mec_developer.py  _mec_io.py  _mec_job.py  _pleiades_api.py  client.py  mec_blob.py  mec_client.py  mec_job.py  mec_kv.py  mec_lambda.py  mec_object.py  mec_worker.py  pleiades_client.py
pymec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pymec/api/: __init__.py  api.py  api_types.py  data_api.py  job_api.py  kv_api.py  lambda_api.py  pleiades_api.py  worker_api.py
pymec_client/: _mec_requester.py  _pleiades_api.py  mec_api.py  mec_blob.py  mec_client copy.py  mec_client.py  mec_developer.py  mec_io.py  mec_job.py  mec_lambda.py  mec_object.py  mec_requester.py  mec_worker.py  pleiades_api.py
pymec_client/_schema/: data.py  error.py  job.py
python-client-generated/: README.md  setup.py
src/: main.py  mec_client.py  mec_io.py  mec_job.py  mec_requester.py  mec_worker.py  pose_processor.py  pose_worker.py  req.py  worker.py
src/pymec/: client.py  (+1 more)
test/: attrs_test.py
tests/: attrs_test.py
try/: kv.py  pydantic_test.py  result_test.py
(+136 files in other folders)
